Run Intellij linter